tests/ui/traits/next-solver/alias-bound-unsound.stderr
error[E0276]: impl has stricter requirements than trait
  --> $DIR/alias-bound-unsound.rs:18:38
   |
LL |     type Item: Copy
   |     --------------- definition of `Item` from trait
...
LL |     type Item = String where String: Copy;
   |                                      ^^^^ impl has extra requirement `String: Copy`

error[E0271]: type mismatch resolving `<() as Foo>::Item normalizes-to String`
  --> $DIR/alias-bound-unsound.rs:24:31
   |
LL |     drop(<() as Foo>::copy_me(&x));
   |                               ^^ types differ
   |
note: required by a bound in `Foo::Item`
  --> $DIR/alias-bound-unsound.rs:10:30
   |
LL |     type Item: Copy
   |          ---- required by a bound in this associated type
LL |     where
LL |         <Self as Foo>::Item: Copy;
   |                              ^^^^ required by this bound in `Foo::Item`

error[E0308]: mismatched types
  --> $DIR/alias-bound-unsound.rs:24:31
   |
LL |     drop(<() as Foo>::copy_me(&x));
   |          -------------------- ^^ types differ
   |          |
   |          arguments to this function are incorrect
   |
   = note: expected reference `&<() as Foo>::Item`
              found reference `&String`
note: associated function defined here
  --> $DIR/alias-bound-unsound.rs:12:8
   |
LL |     fn copy_me(x: &Self::Item) -> Self::Item {
   |        ^^^^^^^ --------------

error[E0271]: type mismatch resolving `<() as Foo>::Item normalizes-to String`
  --> $DIR/alias-bound-unsound.rs:24:10
   |
LL |     drop(<() as Foo>::copy_me(&x));
   |          ^^^^^^^^^^^^^^^^^^^^^^^^ types differ
   |
note: required by a bound in `Foo::Item`
  --> $DIR/alias-bound-unsound.rs:10:30
   |
LL |     type Item: Copy
   |          ---- required by a bound in this associated type
LL |     where
LL |         <Self as Foo>::Item: Copy;
   |                              ^^^^ required by this bound in `Foo::Item`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0271, E0276, E0308.
For more information about an error, try `rustc --explain E0271`.
